--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
         <div class="row">
             <div class="col-8 col-12-small ">
                 <div class="mapframe">
-                   <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d310.3092168475448!2d-0.1321430047837174!3d51.522870301715535!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x8a933951834e7ff8!2sUCL%20Engineering!5e0!3m2!1sen!2suk!4v1581422052722!5m2!1sen!2suk"
+                   <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d155.1548430228028!2d-0.13223479571819352!3d51.52280144699664!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48761b519f4f3e1b%3A0x2c68a3ed8c90ca92!2sUCL%20Engineering%20Front%20Building!5e0!3m2!1sen!2suk!4v1634251985624!5m2!1sen!2suk"
                             width="100%" height="100%" max-width="100%" frameborder="0"></iframe>
                 </div>
             </div>
