--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
         <!--    <h2>On January 2019,</h2>-->
         <!--</header>-->
         <div class="myindent">
-            <p>I am a PhD candidate at <a href="http://crest.cs.ucl.ac.uk/about" target="_blank">CREST</a> center, in the <a
+            <p>I am a PhD candidate at <a href="http://crest.cs.ucl.ac.uk/about" target="_blank">CREST</a> centre, in the <a
                     href="http://www.cs.ucl.ac.uk/home/" target="_blank"> Department of Computer Science</a>, at<a
                     href="http://www.ucl.ac.uk" target="_blank"> University College London</a>.
-                <br>As a member of <a href="https://solar.cs.ucl.ac.uk/">SOLAR</a> team, under the supervision of <a href="http://www0.cs.ucl.ac.uk/staff/F.Sarro/" target="_blank"> Professor
+                <br>As a member of the <a href="https://solar.cs.ucl.ac.uk/">SOLAR</a> team, under the supervision of <a href="http://www0.cs.ucl.ac.uk/staff/F.Sarro/" target="_blank"> Professor
                     Federica Sarro</a>
                 and <a href="http://www0.cs.ucl.ac.uk/staff/M.Harman/" target="_blank"> Professor Mark Harman</a>, I am
                 working on Predictive Models for Software Analysis and Search-Based Software Engineering with a focus on Software Effort Estimation and Agile Methods.
