--- a/index.html
+++ b/index.html
@@ -140,11 +140,21 @@
                         [C]
                         <ul>
                             <li>
+                                <!-- <a href="https://solar.cs.ucl.ac.uk/pdf/tawosi2022saner.pdf" target="_blank"> -->
+                                    "Investigating the Effectiveness of Clustering for Story Point Estimation"
+                                <!-- </a> -->
+                                <a href="https://solar.cs.ucl.ac.uk/pdf/tawosi2022saner.pdf"
+                                   Target="_blank"> (PrePrint &#10515;)</a> 
+                                   with <a href="https://afnan.ws"
+                                        target="_blank">Afnan Al-Subaihin</a> 
+                                   and <a href="http://www0.cs.ucl.ac.uk/staff/F.Sarro/"
+                                        target="_blank">Federica Sarro</a>,
+                                    <i> accepted to appear in IEEE 29th International Conference on Software Analysis, Evolution and Reengineering (SANER)</i>, 2022, pp [TBA].
+                            </li>
+                            <li>
                                 <a href="https://ieeexplore.ieee.org/document/7991700" target="_blank">
                                     "A Light Weight Dynamic Attribute Based Access Control Module Integrated With
-                                    Business Rules."</a>,<i> In Application of Information and Communication
-                                Technologies (AICT) 2016</i>,
-                                10th International Conference on, <i>IEEE</i>, 2016, pp 273-277.
+                                    Business Rules."</a>,<i> in IEEE 10th International Conference on Application of Information and Communication Technologies (AICT)</i>, 2016, pp 273-277.
                             </li>
                             <li>
                                 <a href="https://ieeexplore.ieee.org/document/6111010"
@@ -152,8 +162,7 @@
                                     modular information systems, a robust object oriented Approach." </a>
                                 with <a href="https://scholar.google.com/citations?user=JCyZ3uEAAAAJ&amp;hl=en"
                                         target="_blank">GholamAli N. H. Irani</a>
-                                <i>In Application of Information and Communication Technologies (AICT) 2011</i>, 5th
-                                International Conference on, <i>IEEE</i>, 2011, pp. 1-5.
+                                <i>in IEEE 5th International Conference on Application of Information and Communication Technologies (AICT) 2011</i>, 2011, pp. 1-5.
                             </li>
                         </ul>
                     </div>
