MSR paper added

--- a/index.html
+++ b/index.html
@@ -140,9 +140,19 @@
                         [C]
                         <ul>
                             <li>
-                                <!-- <a href="https://solar.cs.ucl.ac.uk/pdf/tawosi2022saner.pdf" target="_blank"> -->
-                                    "Investigating the Effectiveness of Clustering for Story Point Estimation"
-                                <!-- </a> -->
+                                    "A Versatile Dataset of Agile Open Source Software Projects"
+                                <a href="https://arxiv.org/abs/2202.00979"
+                                   Target="_blank"> (PrePrint &#10515;)</a> 
+                                   with <a href="https://afnan.ws"
+                                        target="_blank">Afnan Al-Subaihin</a> 
+                                    ,<a href="http://www0.cs.ucl.ac.uk/staff/F.Sarro/"
+                                        target="_blank">Rebecca Moussa</a>,
+                                   and <a href="http://www0.cs.ucl.ac.uk/people/R.Moussa.html"
+                                        target="_blank">Federica Sarro</a>,
+                                    <i> accepted to appear in The 2022 Mining Software Repositories Conference (MSR)</i>, 2022, pp [TBA].
+                            </li>
+                            <li>                        
+                                    "Investigating the Effectiveness of Clustering for Story Point Estimation"                                
                                 <a href="https://solar.cs.ucl.ac.uk/pdf/tawosi2022saner.pdf"
                                    Target="_blank"> (PrePrint &#10515;)</a> 
                                    with <a href="https://afnan.ws"
