update recent paper citations and avatar

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                                         target="_blank">Rebecca Moussa</a>,
                                    and <a href="http://www0.cs.ucl.ac.uk/people/R.Moussa.html"
                                         target="_blank">Federica Sarro</a>,
-                                    <i> accepted to appear in The 2022 Mining Software Repositories Conference (MSR)</i>, 2022, pp [TBA].
+                                    <i> in the 19th IEEE Mining Software Repositories Conference (MSR)</i>, 2022, pp [TBA].
                             </li>
                             <li>                        
                                     "Investigating the Effectiveness of Clustering for Story Point Estimation"                                
@@ -159,12 +159,12 @@
                                         target="_blank">Afnan Al-Subaihin</a> 
                                    and <a href="http://www0.cs.ucl.ac.uk/staff/F.Sarro/"
                                         target="_blank">Federica Sarro</a>,
-                                    <i> accepted to appear in IEEE 29th International Conference on Software Analysis, Evolution and Reengineering (SANER)</i>, 2022, pp [TBA].
+                                    <i> in the 29th IEEE International Conference on Software Analysis, Evolution and Reengineering (SANER)</i>, 2022, pp 816-827.
                             </li>
                             <li>
                                 <a href="https://ieeexplore.ieee.org/document/7991700" target="_blank">
                                     "A Light Weight Dynamic Attribute Based Access Control Module Integrated With
-                                    Business Rules."</a>,<i> in IEEE 10th International Conference on Application of Information and Communication Technologies (AICT)</i>, 2016, pp 273-277.
+                                    Business Rules."</a>,<i> in the 10th IEEE International Conference on Application of Information and Communication Technologies (AICT)</i>, 2016, pp 273-277.
                             </li>
                             <li>
                                 <a href="https://ieeexplore.ieee.org/document/6111010"
@@ -172,7 +172,7 @@
                                     modular information systems, a robust object oriented Approach." </a>
                                 with <a href="https://scholar.google.com/citations?user=JCyZ3uEAAAAJ&amp;hl=en"
                                         target="_blank">GholamAli N. H. Irani</a>
-                                <i>in IEEE 5th International Conference on Application of Information and Communication Technologies (AICT) 2011</i>, 2011, pp. 1-5.
+                                <i>in the 5th IEEE International Conference on Application of Information and Communication Technologies (AICT) 2011</i>, 2011, pp. 1-5.
                             </li>
                         </ul>
                     </div>
