update publication and revised layout

--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
                         <div class="h3"><a href="http://www.cs.ucl.ac.uk/home/" target="_blank">Department of
                             Computer Science</a></div>
                         <div class="h3">PhD, Software Engineering</div>
+                        <div class="h4">Thesis: <I>"Predictiveness and Effectiveness of Story Points in Agile Software Development"</I></div>
                         <div class="h3">
                             <ul>
                                 <li><a href="http://www0.cs.ucl.ac.uk/staff/F.Sarro/" target="_blank"> Prof. Federica
@@ -75,7 +76,7 @@
                     <div class="contentItem">
                         <div class="h3">Electrical and Computer Engineering Department</div>
                         <div class="h3">M.Sc., Software Engineering</div>
-                        <div class="h4">Thesis Topic: <I>"Automated Software Design Using Ant Colony
+                        <div class="h4">Thesis: <I>"Automated Software Design Using Ant Colony
                             Optimization"</I></div>
                         <!--<div class="h4"></div>-->
                         <div class="h3">
@@ -105,88 +106,123 @@
                 <div class="page_collapsible collapse-open" id="body-section2">Publication<span></span></div>
                 <div class="container">
                     <div class="h3">
-                        [J]
-                        <ul>
-                            <li>
-                                <a href="https://ieeexplore.ieee.org/document/9440773" Target="_blank">
-                                    "Multi-Objective Software Effort Estimation: A Replication Study"
-                                <a href="/cogee/tse2021_cogee_preprint.pdf"
-                                   Target="_blank"> (PrePrint &#10515;)</a>
-                                with <a href="http://www0.cs.ucl.ac.uk/staff/F.Sarro/"
-                                        target="_blank">Federica Sarro</a>, Alessio Petrozziello, and <a
-                                    href="http://www0.cs.ucl.ac.uk/staff/M.Harman/"
-                                    target="_blank">Mark Harman</a>,
-                                <i>IEEE Transactions on Software Engineerng (TSE)</i>, vol.[TBA], 2021, pp.[TBA].
-                            </li>
-                            <li>
-                                <a href="http://www.sciencedirect.com/science/article/pii/S0164121215001442"
-                                   Target="_blank">"Automated software design using ant colony optimization with
-                                    semantic network support."</a>
-                                with <a href="https://scholar.google.com/citations?user=j6gUwMkAAAAJ&amp;hl=en"
-                                        target="_blank">Saeed Jalili</a> and <a
-                                    href="https://scholar.google.com/citations?user=inmiEkEAAAAJ&amp;hl=en"
-                                    target="_blank">Seyed Mohammad Hossein Hasheminejad</a>,
-                                <i>The Journal of Systems &amp; Software (JSS)</i>, vol. 109, 2015, pp.1-17.
-                            </li>
-                            <li>
-                                <a href="http://www.ijcsi.org/papers/IJCSI-9-2-1-76-84.pdf"
-                                   target="_blank">"MVSDAP: a new extensible, modifiable and secure data
-                                    access pattern for layered Information Systems."</a>
-                                with <a href="https://scholar.google.com/citations?user=JCyZ3uEAAAAJ&amp;hl=en"
-                                        target="_blank">GholamAli N. H. Irani</a>
-                                <i>International Journal of Computer Science Issues(IJCSI)</i> vol. 9, no. 2, 2012.
-                            </li>
-                        </ul>
-                        [C]
-                        <ul>
-                            <li>
-                                    "On the Relationship Between Story Point and Development Effort in Agile Open-Source Software"
-                                <!-- <a href="https://arxiv.org/abs/2202.00979" -->
-                                   <!-- Target="_blank">  -->
-                               (PrePrint soon!)
-                           <!-- </a>  -->
-                                   with <a href="http://www0.cs.ucl.ac.uk/people/R.Moussa.html"
-                                        target="_blank">Rebecca Moussa</a>,
-                                   and <a href="http://www0.cs.ucl.ac.uk/staff/F.Sarro/"
-                                        target="_blank">Federica Sarro</a>,
-                                    <i> in the 16th ACM/IEEE International Symposium on Empirical Software Engineering and Measurement (ESEM)</i>, 2022, pp [TBA].
-                            </li>
-                            <li>
-                                    "A Versatile Dataset of Agile Open Source Software Projects"
-                                <a href="https://arxiv.org/abs/2202.00979"
-                                   Target="_blank"> (PrePrint &#10515;)</a> 
-                                   with <a href="https://afnan.ws"
-                                        target="_blank">Afnan Al-Subaihin</a> 
-                                    ,<a href="http://www0.cs.ucl.ac.uk/people/R.Moussa.html"
-                                        target="_blank">Rebecca Moussa</a>,
-                                   and <a href="http://www0.cs.ucl.ac.uk/staff/F.Sarro/"
-                                        target="_blank">Federica Sarro</a>,
-                                    <i> in the 19th ACM/IEEE Mining Software Repositories Conference (MSR)</i>, 2022, pp [TBA].
-                            </li>
-                            <li>                        
-                                    "Investigating the Effectiveness of Clustering for Story Point Estimation"                                
-                                <a href="https://solar.cs.ucl.ac.uk/pdf/tawosi2022saner.pdf"
-                                   Target="_blank"> (PrePrint &#10515;)</a> 
-                                   with <a href="https://afnan.ws"
-                                        target="_blank">Afnan Al-Subaihin</a> 
-                                   and <a href="http://www0.cs.ucl.ac.uk/staff/F.Sarro/"
-                                        target="_blank">Federica Sarro</a>,
-                                    <i> in the 29th IEEE International Conference on Software Analysis, Evolution and Reengineering (SANER)</i>, 2022, pp 816-827.
-                            </li>
-                            <li>
-                                <a href="https://ieeexplore.ieee.org/document/7991700" target="_blank">
-                                    "A Light Weight Dynamic Attribute Based Access Control Module Integrated With
-                                    Business Rules."</a>,<i> in the 10th IEEE International Conference on Application of Information and Communication Technologies (AICT)</i>, 2016, pp 273-277.
-                            </li>
-                            <li>
-                                <a href="https://ieeexplore.ieee.org/document/6111010"
-                                   target="_blank">"AAMA: A new Authentication and Authorization architecture for
-                                    modular information systems, a robust object oriented Approach." </a>
-                                with <a href="https://scholar.google.com/citations?user=JCyZ3uEAAAAJ&amp;hl=en"
-                                        target="_blank">GholamAli N. H. Irani</a>
-                                <i>in the 5th IEEE International Conference on Application of Information and Communication Technologies (AICT) 2011</i>, 2011, pp. 1-5.
-                            </li>
-                        </ul>
+                        <h4 class="uniname">2022</h4>
+                        <div class="contentItem">
+                            <ul>
+                                <li>
+                                       "On the Relationship Between Story Point and Development Effort in Agile Open-Source Software"
+                                    <a href="https://solar.cs.ucl.ac.uk/pdf/tawosi2022esem.pdf"
+                                       Target="_blank"> (PrePrint &#10515;)</a>
+                                       with <a href="http://www0.cs.ucl.ac.uk/people/R.Moussa.html"
+                                            target="_blank">Rebecca Moussa</a>
+                                       and <a href="http://www0.cs.ucl.ac.uk/staff/F.Sarro/"
+                                            target="_blank">Federica Sarro</a>,
+                                        <i> in the 16th ACM/IEEE International Symposium on Empirical Software Engineering and Measurement (ESEM)</i>, 2022, pp [TBA].
+                                </li>
+                                <li>
+                                       "Deep Learning for Agile Effort Estimation Have We Solved the Problem Yet?"
+                                    <a href="https://arxiv.org/abs/2201.05401"
+                                       Target="_blank"> (PrePrint &#10515;)</a>
+                                       with <a href="http://www0.cs.ucl.ac.uk/people/R.Moussa.html"
+                                            target="_blank">Rebecca Moussa</a>,
+                                       and <a href="http://www0.cs.ucl.ac.uk/staff/F.Sarro/"
+                                            target="_blank">Federica Sarro</a>,
+                                        <i> arXiv:2201.05401 </i>, 2022.
+                                </li>
+                                <li>
+                                    <a href="https://ieeexplore.ieee.org/document/9796320" target="_blank">
+                                        "A Versatile Dataset of Agile Open Source Software Projects"
+                                    <a href="https://solar.cs.ucl.ac.uk/pdf/tawosi2022msr.pdf"
+                                       Target="_blank"> (PrePrint &#10515;)</a>                             
+                                       with <a href="https://afnan.ws"
+                                            target="_blank"> Afnan Al-Subaihin</a>, 
+                                        <a href="http://www0.cs.ucl.ac.uk/people/R.Moussa.html"
+                                            target="_blank"> Rebecca Moussa</a>,
+                                       and <a href="http://www0.cs.ucl.ac.uk/staff/F.Sarro/"
+                                            target="_blank"> Federica Sarro</a>,
+                                        <i> in the 19th ACM/IEEE Mining Software Repositories Conference (MSR)</i>, 2022, pp 707-711.
+                                        <a href="https://solar.cs.ucl.ac.uk/os/tawos.html"
+                                       Target="_blank"> (Dataset &#9636;)</a> 
+                                </li>
+                                <li>                        
+                                        "Investigating the Effectiveness of Clustering for Story Point Estimation"                                
+                                    <a href="https://solar.cs.ucl.ac.uk/pdf/tawosi2022saner.pdf"
+                                       Target="_blank"> (PrePrint &#10515;)</a> 
+                                       with <a href="https://afnan.ws"
+                                            target="_blank">Afnan Al-Subaihin</a> 
+                                       and <a href="http://www0.cs.ucl.ac.uk/staff/F.Sarro/"
+                                            target="_blank">Federica Sarro</a>,
+                                        <i> in the 29th IEEE International Conference on Software Analysis, Evolution and Reengineering (SANER)</i>, 2022, pp 816-827.
+                                </li>
+                            </ul>
+                        </div>
+                        <h4 class="uniname">2021</h4>
+                        <div class="contentItem">
+                            <ul>
+                                <li>
+                                    <a href="https://ieeexplore.ieee.org/document/9440773" Target="_blank">
+                                        "Multi-Objective Software Effort Estimation: A Replication Study"
+                                    <a href="/cogee/tse2021_cogee_preprint.pdf"
+                                       Target="_blank"> (PrePrint &#10515;)</a>
+                                    with <a href="http://www0.cs.ucl.ac.uk/staff/F.Sarro/"
+                                            target="_blank">Federica Sarro</a>, Alessio Petrozziello, and <a
+                                        href="http://www0.cs.ucl.ac.uk/staff/M.Harman/"
+                                        target="_blank">Mark Harman</a>,
+                                    <i>IEEE Transactions on Software Engineerng (TSE)</i>, vol.[TBA], 2021, pp.[TBA].
+                                </li>
+                            </ul>
+                        </div>
+                        <h4 class="uniname">2016</h4>
+                        <div class="contentItem">
+                            <ul>
+                                <li>
+                                    <a href="https://ieeexplore.ieee.org/document/7991700" target="_blank">
+                                        "A Light Weight Dynamic Attribute Based Access Control Module Integrated With
+                                        Business Rules."</a>,<i> in the 10th IEEE International Conference on Application of Information and Communication Technologies (AICT)</i>, 2016, pp 273-277.
+                                </li>
+                            </ul>
+                        </div>
+                        <h4 class="uniname">2015</h4>
+                        <div class="contentItem">
+                            <ul>
+                                <li>
+                                    <a href="http://www.sciencedirect.com/science/article/pii/S0164121215001442"
+                                       Target="_blank">"Automated software design using ant colony optimization with
+                                        semantic network support."</a>
+                                    with <a href="https://scholar.google.com/citations?user=j6gUwMkAAAAJ&amp;hl=en"
+                                            target="_blank">Saeed Jalili</a> and <a
+                                        href="https://scholar.google.com/citations?user=inmiEkEAAAAJ&amp;hl=en"
+                                        target="_blank">Seyed Mohammad Hossein Hasheminejad</a>,
+                                    <i>The Journal of Systems &amp; Software (JSS)</i>, vol. 109, 2015, pp.1-17.
+                                </li>
+                            </ul>
+                        </div>
+                        <h4 class="uniname">2012</h4>
+                        <div class="contentItem">
+                            <ul>
+                                <li>
+                                    <a href="http://www.ijcsi.org/papers/IJCSI-9-2-1-76-84.pdf"
+                                       target="_blank">"MVSDAP: a new extensible, modifiable and secure data
+                                        access pattern for layered Information Systems."</a>
+                                    with <a href="https://scholar.google.com/citations?user=JCyZ3uEAAAAJ&amp;hl=en"
+                                            target="_blank">GholamAli N. H. Irani</a>
+                                    <i>International Journal of Computer Science Issues(IJCSI)</i> vol. 9, no. 2, 2012.
+                                </li>
+                            </ul>
+                        </div>
+                        <h4 class="uniname">2011</h4>
+                        <div class="contentItem">
+                            <ul>
+                                <li>
+                                    <a href="https://ieeexplore.ieee.org/document/6111010"
+                                       target="_blank">"AAMA: A new Authentication and Authorization architecture for
+                                        modular information systems, a robust object oriented Approach." </a>
+                                    with <a href="https://scholar.google.com/citations?user=JCyZ3uEAAAAJ&amp;hl=en"
+                                            target="_blank">GholamAli N. H. Irani</a>
+                                    <i>in the 5th IEEE International Conference on Application of Information and Communication Technologies (AICT) 2011</i>, 2011, pp. 1-5.
+                                </li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
                 <!-- end collapsible -->
