ieee link to clustering paper

--- a/index.html
+++ b/index.html
@@ -144,7 +144,8 @@
                                         <a href="https://solar.cs.ucl.ac.uk/os/tawos.html"
                                        Target="_blank"> (Dataset &#9636;)</a> 
                                 </li>
-                                <li>                        
+                                <li>
+                                    <a href="https://ieeexplore.ieee.org/document/9825830" target="_blank">
                                         "Investigating the Effectiveness of Clustering for Story Point Estimation"                                
                                     <a href="https://solar.cs.ucl.ac.uk/pdf/tawosi2022saner.pdf"
                                        Target="_blank"> (PrePrint &#10515;)</a> 
