--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="inner">
         <a href="#" class="image avatar"><img src="images/avatar.jpg" alt=""/></a>
         <h1><strong><span style="font-size: 100px">Vali<br> Tawosi</span></strong><br/>
-            PhD Student @ <a href="http://ucl.ac.uk">UCL</a></h1>
+            Sr. Ass. AI Researcher <br><a href="https://www.jpmorgan.com/technology/artificial-intelligence">@JP Morgan Chase & Co</a></h1>
     </div>
 </header>
 
@@ -26,13 +26,15 @@
         <!--    <h2>On January 2019,</h2>-->
         <!--</header>-->
         <div class="myindent">
-            <p>I am a PhD candidate at <a href="http://crest.cs.ucl.ac.uk/about" target="_blank">CREST</a> centre, in the <a
+            <p>I am a Senior Associate AI Researcher at <a href="https://www.jpmorgan.com">JP Morgan Chase & Co</a>, London, UK.</p>
+
+            <p>I am also a PhD candidate at <a href="http://crest.cs.ucl.ac.uk/about" target="_blank">CREST</a> centre, in the <a
                     href="http://www.cs.ucl.ac.uk/home/" target="_blank"> Department of Computer Science</a>, at<a
                     href="http://www.ucl.ac.uk" target="_blank"> University College London</a>.
                 <br>As a member of the <a href="https://solar.cs.ucl.ac.uk/">SOLAR</a> team, under the supervision of <a href="http://www0.cs.ucl.ac.uk/staff/F.Sarro/" target="_blank"> Professor
                     Federica Sarro</a>
-                and <a href="http://www0.cs.ucl.ac.uk/staff/M.Harman/" target="_blank"> Professor Mark Harman</a>, I am
-                working on Predictive Models for Software Analysis and Search-Based Software Engineering with a focus on Software Effort Estimation and Agile Methods.
+                and <a href="http://www0.cs.ucl.ac.uk/staff/M.Harman/" target="_blank"> Professor Mark Harman</a>, I 
+                worked on Predictive Models for Software Analysis and Search-Based Software Engineering with a focus on Software Effort Estimation and Agile Methods.
             </p>
         </div>
         <!--<header class="major2">-->
@@ -54,7 +56,7 @@
                 <div class="page_collapsible collapse-open" id="body-section1">Education<span></span></div>
                 <div class="container">
                     <h4 class="uniname"><a href="http://www.ucl.ac.uk" target="_blank">University College London</a>,
-                        London, UK <span>from Jan. 2019</span></h4>
+                        London, UK <span>since Jan. 2019</span></h4>
                     <div class="contentItem">
                         <div class="h3"><a href="http://www.cs.ucl.ac.uk/home/" target="_blank">Department of
                             Computer Science</a></div>
@@ -226,6 +228,12 @@
                 <!-- collapsible -->
                 <div class="page_collapsible collapse-open" id="body-section3">Work Experience<span></span></div>
                 <div class="container">
+                    <h4 class="uniname"><a href="https://www.jpmorgan.com/technology/artificial-intelligence" target="_blank">JP Morgan Chase & Co</a>, London,
+                        UK<span>since Sep. 2022</span>
+                    </h4>
+                    <div class="contentItem">
+                        <div class="h3">Senior Associate AI Researcher</div>
+                    </div>
                     <h4 class="uniname"><a href="http://www.navaco.ir" target="_blank">Navaco</a>, Tehran,
                         Iran<span>Jun. 2017 to Dec. 2018</span>
                     </h4>
@@ -250,24 +258,25 @@
     <section id="three">
         <h2>Contact Information</h2>
         <div class="row">
-            <div class="col-8 col-12-small ">
-                <div class="mapframe">
+            <div class="col-6 col-12-small ">
+            <!--     <div class="mapframe">
                    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d155.1548430228028!2d-0.13223479571819352!3d51.52280144699664!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48761b519f4f3e1b%3A0x2c68a3ed8c90ca92!2sUCL%20Engineering%20Front%20Building!5e0!3m2!1sen!2suk!4v1634251985624!5m2!1sen!2suk"
                             width="100%" height="100%" max-width="100%" frameborder="0"></iframe>
-                </div>
+                </div> -->
             </div>
-            <div class="col-4 col-12-small">
+            <div class="col-6 col-12-small">
                 <ul class="labeled-icons">
                     <li>
                         <h3 class="icon fa-building-o"><span class="label">Address</span></h3>
-                        3rd floor, <br/>
-                        Engineering Front Bdg, UCL,<br/>
-                        London WC1E 7JE<br/>
+                        25 Bank Street<br/>
+                        London E14 5JP<br/>
                         United Kingdom
                     </li>
                     <li>
                         <h3 class="icon fa-envelope-o"><span class="label">Email</span></h3>
-                        <a href="#">vali.tawosi [at] ucl.ac.uk</a>
+                        <a href="#">vali.tawosi [at] jpmorgan [dot] com</a>
+                        <br>
+                        <a href="#">vali.tawosi [at] ucl [dot] ac [dot] uk</a>
                     </li>
                 </ul>
             </div>
