--- a/index.html
+++ b/index.html
@@ -112,6 +112,19 @@
                         <div class="contentItem">
                             <ul>
                                 <li>
+                                    <a href="https://ieeexplore.ieee.org/document/9984979" target="_blank">
+                                       "Agile Effort Estimation: Have We Solved the Problem Yet? Insights From A Replication Study"
+                                   </a>
+                                    <a href="https://solar.cs.ucl.ac.uk/pdf/tawosi2022tse.pdf"
+                                       Target="_blank"> (PrePrint &#10515;)</a>
+                                       with <a href="http://www0.cs.ucl.ac.uk/people/R.Moussa.html"
+                                            target="_blank">Rebecca Moussa</a>,
+                                       and <a href="http://www0.cs.ucl.ac.uk/staff/F.Sarro/"
+                                            target="_blank">Federica Sarro</a>,
+                                        <i>IEEE Transactions on Software Engineerng (TSE)</i>, 2022.
+                                </li>
+
+                                <li>
                                     <a href="https://dl.acm.org/doi/abs/10.1145/3544902.3546238" target="_blank">
                                        "On the Relationship Between Story Point and Development Effort in Agile Open-Source Software"</a>
                                     <a href="https://solar.cs.ucl.ac.uk/pdf/tawosi2022esem.pdf"
@@ -121,17 +134,7 @@
                                        and <a href="http://www0.cs.ucl.ac.uk/staff/F.Sarro/"
                                             target="_blank">Federica Sarro</a>,
                                         <i> in the 16th ACM/IEEE International Symposium on Empirical Software Engineering and Measurement (ESEM)</i>, 2022, pp 183-194.
-                                </li>
-                                <li>
-                                       "Deep Learning for Agile Effort Estimation Have We Solved the Problem Yet?"
-                                    <a href="https://arxiv.org/abs/2201.05401"
-                                       Target="_blank"> (PrePrint &#10515;)</a>
-                                       with <a href="http://www0.cs.ucl.ac.uk/people/R.Moussa.html"
-                                            target="_blank">Rebecca Moussa</a>,
-                                       and <a href="http://www0.cs.ucl.ac.uk/staff/F.Sarro/"
-                                            target="_blank">Federica Sarro</a>,
-                                        <i> arXiv:2201.05401 </i>, 2022.
-                                </li>
+                                </li>                                
                                 <li>
                                     <a href="https://ieeexplore.ieee.org/document/9796320" target="_blank">
                                         "A Versatile Dataset of Agile Open Source Software Projects" </a>
@@ -258,12 +261,21 @@
     <section id="three">
         <h2>Contact Information</h2>
         <div class="row">
-            <div class="col-6 col-12-small ">
+             <div class="col-6 col-12-small "> 
+                <ul class="labeled-icons">
+                    <li>
+                        <h3 class="icon fa-envelope-o"><span class="label">Email</span></h3>
+                        <a href="#">vali.tawosi [at] jpmorgan [dot] com</a>
+                        <br>
+                        <a href="#">vali.tawosi [at] ucl [dot] ac [dot] uk</a>
+                    </li>
+                </ul>
             <!--     <div class="mapframe">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2483.5559521491364!2d-0.022895084230183025!3d51.50301567963442!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48761cab43ba98af%3A0x7901d4ddebf1e959!2sJP%20Morgan%20HQ!5e0!3m2!1sen!2suk!4v1671302239733!5m2!1sen!2suk"  width="100%" height="100%" max-width="100%" frameborder="0"></iframe>
                    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d155.1548430228028!2d-0.13223479571819352!3d51.52280144699664!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48761b519f4f3e1b%3A0x2c68a3ed8c90ca92!2sUCL%20Engineering%20Front%20Building!5e0!3m2!1sen!2suk!4v1634251985624!5m2!1sen!2suk"
                             width="100%" height="100%" max-width="100%" frameborder="0"></iframe>
-                </div> -->
-            </div>
+                </div>-->
+             </div>
             <div class="col-6 col-12-small">
                 <ul class="labeled-icons">
                     <li>
@@ -272,12 +284,7 @@
                         London E14 5JP<br/>
                         United Kingdom
                     </li>
-                    <li>
-                        <h3 class="icon fa-envelope-o"><span class="label">Email</span></h3>
-                        <a href="#">vali.tawosi [at] jpmorgan [dot] com</a>
-                        <br>
-                        <a href="#">vali.tawosi [at] ucl [dot] ac [dot] uk</a>
-                    </li>
+                    
                 </ul>
             </div>
         </div>
